# makeclean

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  clippy_check.yml  release.yml  test.yml
src/: build_tool_manager.rs  build_tools.rs  cli.rs  find.rs  find_projects.rs  find_projects2.rs  fs.rs  lib.rs  main.rs  mtime.rs  project.rs  vcs.rs
src/build_tools/: cargo.rs  dotnet.rs  elm.rs  flutter.rs  gradle.rs  maven.rs  mix.rs  npm.rs
src/find/: vcs.rs
src/project/: archive.rs  clean.rs  dto.rs  mtime.rs  vcs.rs  zip.rs
tests/: cli_test.rs  test.rs
tests/cargo_test/: archive.rs  clean.rs  list.rs  mod.rs  zip.rs
tests/tests/: archive.rs  build_tools.rs  clean.rs  list.rs  mod.rs
tests/util/: cargo.rs  elm.rs  flutter.rs  fs.rs  git.rs  gradle.rs  mix.rs  mod.rs  npm.rs  project_filter.rs
