[package]
name = "makeclean"
version = "0.3.1"
edition = "2021"
description = "Clean up projects you're no longer working on."
authors = ["Kevin Bader <kevinbader@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/kevinbader/makeclean"
homepage = "https://github.com/kevinbader/makeclean"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
assert_fs = "1.0.7"
camino = "1.0.7"
chrono = "0.4.19"
clap = { version = "3.0.14", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
console = "0.15.0"
dialoguer = "0.10.0"
displaydoc = "0.2.3"
git2 = "0.13.23"
human-panic = "1.0.3"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tabular = "0.1.4"
tar = "0.4.38"
thiserror = "1.0.30"
toml = "0.5.8"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.8", features = ["json"] }
walkdir = "2.3.2"
xz = "0.1.0"
zip = { version = "0.5", default-features = false, features = [
    "deflate",
    "time",
] }

[dev-dependencies]
assert_cmd = "2.0.4"
fs-set-times = "0.15.0"
predicates = "2.1.1"

[features]
