[package]
name = "makeclean"
version = "1.0.0"
edition = "2021"
rust-version = "1.58.1"
description = "Clean up projects you're no longer working on."
authors = ["Kevin Bader <kevinbader@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/kevinbader/makeclean"
homepage = "https://github.com/kevinbader/makeclean"
categories = ["command-line-utilities", "development-tools"]

[package.metadata.release]
publish = false # We publish with a GitHub Actions workflow
allow-branch = ["main"]
pre-release-commit-message = "Bump version: {{prev_version}} => {{version}}"
pre-release-replacements = [
    { file = "README.md", search = "Current release: \\[[a-z0-9\\.-]+\\]\\(https://github.com/kevinbader/makeclean/tree/v[a-z0-9\\.-]+\\)", replace = "Current release: [{{version}}](https://github.com/kevinbader/makeclean/tree/v{{version}})" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n<!-- ## [Unreleased] - ReleaseDate -->\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/kevinbader/makeclean/compare/{{tag_name}}...HEAD", exactly = 1 },
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
assert_fs = "1.0.7"
chrono = "0.4.19"
clap = { version = "3.1.3", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
console = "0.15.0"
dialoguer = "0.10.0"
displaydoc = "0.2.3"
git2 = "0.13.23"
human-panic = "1.0.3"
ignore = "0.4.18"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tabular = "0.1.4"
tar = "0.4.38"
thiserror = "1.0.30"
toml = "0.5.8"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.8", features = ["json"] }
walkdir = "2.3.2"
xz = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
claim = "0.5.0"
fs-set-times = "0.15.0"
predicates = "2.1.1"

[features]
